[package]
name = "oximedia-cloud"
description = "Cloud storage and media services integration for AWS, Azure, and GCP"
keywords = ["cloud", "aws", "azure", "storage", "multimedia"]
categories = ["multimedia", "web-programming"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"

[features]
# OCI Object Storage backend (reqwest, rsa, base64 are unconditional deps;
# this feature flag exists for conditional compilation guards and future dep-gating)
oci = []

[lints]
workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

# AWS SDK (ring-based TLS to avoid aws-lc-sys C dependency)
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-sdk-mediaconvert = { workspace = true }
aws-sdk-medialive = { workspace = true }
aws-sdk-mediapackage = { workspace = true }
aws-sdk-cloudwatch = { workspace = true }
aws-sdk-sts = { workspace = true }
aws-sdk-kms = { workspace = true }
aws-smithy-types = "1.4"
aws-smithy-runtime = { version = "1", features = ["tls-rustls", "client"] }
aws-smithy-runtime-api = { workspace = true }

# Azure SDK
azure_core = { workspace = true }
azure_storage = { workspace = true }
azure_storage_blobs = { workspace = true }
azure_identity = "1.0"

# GCP (using reqwest for REST API)
reqwest = { workspace = true, features = ["stream"] }
base64 = { workspace = true }
url = "2.5"
sha2 = { workspace = true }
hmac = { workspace = true }
rsa = { workspace = true }
md-5 = "0.11"
hex = "0.4"

# Additional utilities
futures = "0.3"
pin-project = "1.1"
parking_lot = { workspace = true }
dashmap = { workspace = true }
urlencoding = "2.1"
rayon = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.7"
tempfile.workspace = true
wiremock = "0.6"
test-case = "3.3"
