[package]
name = "oximedia-collab"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Real-time collaboration system for multi-user video editing"
keywords = ["collaboration", "realtime", "editing", "video", "multimedia"]
categories = ["multimedia", "network-programming"]
readme = "README.md"
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
yrs = "0.27"
serde = { workspace = true }
serde_json = { workspace = true }
oxicode = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
futures.workspace = true
tokio-tungstenite = "0.29"
bytes = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
oxiarc-deflate = { workspace = true }

[dev-dependencies]
tokio-test.workspace = true
proptest = { workspace = true }

[lib]
name = "oximedia_collab"
path = "src/lib.rs"
