[package]
name = "oximedia-compat-cv2"
description = "OpenCV cv2 API compatibility layer for OxiMedia — Pure Rust, BGR ordering, ~150 OpenCV constants"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true
readme = "README.md"

keywords = ["opencv", "cv2", "computer-vision", "image-processing", "compatibility"]
categories = ["computer-vision", "multimedia::images"]

[lints]
workspace = true

[features]
default = []
dnn = ["dep:oxionnx"]

[dependencies]
oximedia-core.workspace = true
oximedia-image.workspace = true
oximedia-cv.workspace = true
oximedia-scaling.workspace = true
oximedia-colormgmt.workspace = true
thiserror.workspace = true
oxionnx = { workspace = true, optional = true }

[build-dependencies]
syn = { workspace = true }
quote = "1"
