[package]
name = "oximedia-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Core types and traits for OxiMedia"

[lints]
workspace = true

[features]
default = []
wasm = ["wasm-bindgen", "console_error_panic_hook"]

[dependencies]
thiserror.workspace = true
bitflags.workspace = true
serde = { workspace = true, features = ["derive"] }
wasm-bindgen = { workspace = true, optional = true }
console_error_panic_hook = { workspace = true, optional = true }
