[package]
name = "oximedia-dedup"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Media deduplication and duplicate detection for OxiMedia"
keywords = ["deduplication", "multimedia", "video", "fingerprint", "detection"]
categories = ["multimedia", "algorithms"]
readme = "README.md"

[lints]
workspace = true

[features]
default = []
sqlite = ["oxisql-core", "oxisql-sqlite-compat"]

[dependencies]
oximedia-core.workspace = true
oximedia-cv.workspace = true
oximedia-audio.workspace = true
blake3.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
oxisql-core = { workspace = true, optional = true }
oxisql-sqlite-compat = { workspace = true, optional = true }
tokio = { workspace = true, features = ["full"] }
thiserror.workspace = true
rayon.workspace = true
bytes.workspace = true
oxifft = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
