[package]
name = "oximedia-drm"
version.workspace = true
edition = "2021"
authors = ["OxiMedia Contributors"]
description = "DRM and encryption support for OxiMedia streaming"
license = "Apache-2.0"
readme = "README.md"
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
ring = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
hex = "0.4"
bytes = { workspace = true }
quick-xml = { version = "0.39", features = ["serialize"] }

[features]
default = ["clearkey"]
widevine = []
playready = []
fairplay = []
clearkey = []
all-drm = ["widevine", "playready", "fairplay", "clearkey"]

[dev-dependencies]
anyhow = "1.0"

[lib]
name = "oximedia_drm"
path = "src/lib.rs"
