[package]
name = "oximedia-edit"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Video timeline editor for OxiMedia"
readme = "README.md"

[lints]
workspace = true

[dependencies]
oximedia-core.workspace = true
oximedia-codec = { workspace = true, default-features = true }
oximedia-audio = { workspace = true }
oximedia-graph = { workspace = true }
thiserror.workspace = true
bytes.workspace = true
async-trait.workspace = true
tracing.workspace = true
rayon = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["sync", "time"] }
futures = "0.3"
