[package]
name = "oximedia-effects"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Professional audio effects suite for OxiMedia"
readme = "README.md"

[lints]
workspace = true

[dependencies]
oximedia-core.workspace = true
oximedia-audio.workspace = true
thiserror.workspace = true
rustfft = "6"
rubato = "1.0"
rand.workspace = true

[dev-dependencies]
