[package]
name = "oximedia-farm"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Distributed encoding farm coordinator for OxiMedia - production-grade job management and worker coordination"

[lints]
workspace = true

[features]
default = []
sqlite = ["rusqlite", "r2d2", "r2d2_sqlite"]

[dependencies]
# Core async runtime
async-trait.workspace = true

# Error handling
thiserror.workspace = true

# Logging and tracing
tracing.workspace = true

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# Time handling
chrono = { workspace = true, features = ["serde"] }

# UUID generation
uuid = { workspace = true }

# Concurrency utilities
dashmap = { workspace = true }
parking_lot = { workspace = true }

# System information
num_cpus = "1.17"
hostname = "0.4"

# Network utilities
bytes.workspace = true

# Metrics and monitoring
prometheus = { workspace = true }

# Random number generation
rand.workspace = true

# Hashing (used by output_validator)
sha2.workspace = true

# Configuration
config = "0.15"
toml = "1.0"

# Internal dependencies
oximedia-core.workspace = true
oximedia-codec = { workspace = true, default-features = true }
oximedia-io.workspace = true
oximedia-transcode.workspace = true
oximedia-qc.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tonic = { workspace = true }
tonic-prost = "0.14"
prost = { workspace = true }
prost-types = { workspace = true }
rusqlite = { workspace = true, optional = true }
r2d2 = { workspace = true, optional = true }
r2d2_sqlite = { workspace = true, optional = true }
sysinfo = "0.38"
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = "2.2.0"

[target.'cfg(not(target_arch = "wasm32"))'.build-dependencies]
tonic-build = "0.14"
tonic-prost-build = "0.14"

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }
