[package]
name = "oximedia-farm"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
description = "Distributed encoding farm coordinator for OxiMedia - production-grade job management and worker coordination"
keywords = ["workflow", "batch", "processing", "multimedia", "pipeline"]
categories = ["multimedia", "algorithms"]
readme = "README.md"

[lints]
workspace = true

[dependencies]
# Error handling
thiserror.workspace = true

# Logging and tracing
tracing.workspace = true

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml_ng.workspace = true
toml.workspace = true

# Base64 (for email AUTH PLAIN encoding)
base64.workspace = true

# Time handling
chrono = { workspace = true, features = ["serde"] }

# UUID generation
uuid = { workspace = true }

# Concurrency utilities
dashmap = { workspace = true }
parking_lot = { workspace = true }

# Network utilities
bytes.workspace = true

# Cryptographic hashing (pure Rust, wasm32-compatible)
sha2.workspace = true

# Internal dependencies (all wasm32-compatible)
oximedia-core.workspace = true
oximedia-codec = { workspace = true, features = ["image-io"] }
oximedia-io.workspace = true
oximedia-transcode.workspace = true
oximedia-qc.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Core async runtime
tokio = { workspace = true, features = ["full"] }
async-trait.workspace = true

# gRPC and serialization
tonic = { workspace = true }
tonic-prost = "0.14"
prost = { workspace = true }
prost-types = { workspace = true }

# Database
oxisql-core = { workspace = true }
oxisql-sqlite-compat = { workspace = true }

# Random number generation (getrandom 0.4 on wasm32 needs wasm_js feature; move here)
rand.workspace = true

# System information
num_cpus = { workspace = true }
hostname.workspace = true
sysinfo = { workspace = true }

# Metrics and monitoring
prometheus = { workspace = true }

# Configuration
config = "0.15"

# TLS support
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = "2.2.0"

# Logging subscriber (uses env-filter, file sinks — not wasm-compatible)
tracing-subscriber = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
tonic-prost-build = { workspace = true }
# Pure-Rust protobuf compiler (parses .proto files directly; no external
# `protoc` binary required at build time — replaces protoc-based codegen).
protox = { workspace = true }

[features]
sqlite = []

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
